--- a/package.json
+++ b/package.json
@@ -8,22 +8,18 @@
     "axios": "^0.20.0",
     "chart.js": "2.9.3",
     "classnames": "2.2.6",
+    "cross-env": "^7.0.2",
     "history": "4.10.1",
+    "jwt-decode": "^3.0.0",
     "node-sass": "4.13.1",
     "perfect-scrollbar": "1.5.0",
     "prop-types": "15.7.2",
     "react": "16.13.0",
-    "react-bootstrap-switch": "^15.5.3",
     "react-chartjs-2": "2.9.0",
-    "react-datetime": "^3.0.4",
     "react-dom": "16.13.0",
-    "react-google-maps": "9.4.5",
-    "react-notification-alert": "0.0.12",
     "react-redux": "^7.2.1",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.0",
-    "react-select": "^3.1.0",
-    "react-tagsinput": "^3.19.0",
     "reactstrap": "8.4.1",
     "redux": "^4.0.5",
     "redux-form": "^8.3.6",
@@ -31,7 +27,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && gulp licenses",
+    "build": "cross-env GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
