--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "16.13.0",
     "react-chartjs-2": "2.9.0",
     "react-dom": "16.13.0",
+    "react-export-excel": "^0.5.3",
     "react-redux": "^7.2.1",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.0",
